Completed sprint1 Manage Product, EDIT & DELETE